@@ -1,6 +1,6 @@
 package exercise;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 // BEGIN
@@ -8,8 +8,8 @@ public class App {
     public static boolean scrabble(String charSet, String word) {
         char[] charSetArr = charSet.toLowerCase().toCharArray();
         char[] wordArr = word.toLowerCase().toCharArray();
-        List<char[]> charSetList = Arrays.asList(charSetArr);
-        List<char[]> wordList = Arrays.asList(wordArr);
+        List<char[]> charSetList = new ArrayList<>(List.of(charSetArr));
+        List<char[]> wordList = new ArrayList<>(List.of(wordArr));
 
         for (char[] ch : charSetList) {
             if (wordList.contains(ch)) {
